chore: update to 2.2.4

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,8 @@ project/skyway_android_sdk/libwebrtc/libwebrtc.aar
 project/skyway_android_sdk/libwebrtc/build
 examples/*/.idea
 project/skyway_android_sdk/core/src/main/cpp/env.cmake
+project/skyway_android_sdk/core/src/main/cpp/common.cmake
 project/skyway_android_sdk/outputs-aar
 examples/QuickStart/app/libs/*.aar
+project/deps
+project/skyway_android_sdk/libwebrtc/src
