--- a/project/skyway_android_sdk/libwebrtc/build.gradle
+++ b/project/skyway_android_sdk/libwebrtc/build.gradle
@@ -1,16 +1,52 @@
 plugins {
+    id 'com.android.library'
+    id 'org.jetbrains.kotlin.android'
     id 'maven-publish'
 }
 
 def libwebrtcVer = rootProject.ext.libwebrtcVer
 def libwebrtcDeprecation = 'SkyWay Android SDK libwebrtc library'
 
-configurations.maybeCreate("default")
-artifacts.add("default", file("libwebrtc.aar"))
 
-tasks.register('clean') {
-    // workaround for error:
-    // Task with name 'clean' not found in project ':libwebrtc'
+android {
+    namespace "org.webrtc"
+    compileSdk 35
+
+    defaultConfig {
+        minSdk 23
+        targetSdk 35
+    }
+
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
+
+        }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = "17"
+    }
+
+    publishing {
+        singleVariant('release') {
+            withSourcesJar()
+        }
+    }
+
+    libraryVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = "${archivesBaseName}.aar"
+        }
+    }
+}
+
+dependencies {
+    implementation 'androidx.annotation:annotation:1.3.0'
 }
 
 publishing {
@@ -27,7 +63,9 @@ publishing {
             artifactId = 'libwebrtc'
             version = libwebrtcVer
 
-            artifact("libwebrtc.aar")
+            afterEvaluate {
+                from components.release
+            }
 
             pom {
                 name = 'libwebrtc'
